[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pytest-llm-cache"
version = "0.1.0"
description = "LLM caching helpers and pytest plugin for Gemini/OpenAI workflows"
authors = ["jjeaby@gmail.com"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pytest_llm_cache", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
google-generativeai = "*"
openai = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.pyright]
extraPaths = ["src"]

[tool.poetry.plugins."pytest11"]
llm_cache = "pytest_llm_cache.pytest_llm_cache"
